<?xml version="1.0"?>
<package format="2">
  <name>qfcerrt_bridge_noot</name>
  <version>0.0.1</version>
  <description>The QFCE-RRT execution package for running it in ROS</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="nvethrandil@gmail.com">Noah Otte</maintainer>
  <license>MIT</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/nootpackage</url> -->

  <author email="nvethrandil@gmail.com">Noah Otte</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qfcerrt_noot</build_depend>
  <build_export_depend>qfcerrt_noot</build_export_depend>
  <exec_depend>qfcerrt_noot</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
